Fixed the logical problem.  Started a UI system.  In its very early stages.

--- a/bin/index.html
+++ b/bin/index.html
@@ -20,6 +20,15 @@
             </div>
         </div>
 
+        <!-- Overlay Menus -->
+        <!-- Celestial -->
+        <div class="overlay-menu celestial">
+            <div class="name">Name of Celestial</div>
+            <div class="sequence">Name of Sequence</div>
+        </div>
+        <!-- /Celestial -->
+        <!-- /Overlay Menus -->
+
         <!-- Context Menus -->
         <!-- Celestial -->
         <!-- <div class="context-menu celestial">
