Created a context menu for the Celestials to help with logical debugging.

--- a/bin/index.html
+++ b/bin/index.html
@@ -22,7 +22,7 @@
 
         <!-- Overlay Menus -->
         <!-- Celestial -->
-        <div class="overlay-menu celestial">
+        <div class="overlay-menu celestial hide">
             <div class="name">Name of Celestial</div>
             <div class="sequence">Name of Sequence</div>
         </div>
@@ -31,7 +31,58 @@
 
         <!-- Context Menus -->
         <!-- Celestial -->
+        <div class="context-menu celestial">
+            <div class="name">Name</div>
+            <div class="type">Type of</div>
+            <!-- States -->
+            <div class="states ctx-dropdown-group">
+                <div class="ctx-dropdown-name">States</div>
+                <ul class="ctx-dropdown template">
+                    <li class="ctx-dropdown-header template">Name Template</li>
+                    <li class="ctx-dropdown-2 template">
+                        <ul>                            
+                            <li class="ctx-item template">Template</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /States -->
+            <!-- Actions -->
+            <div class="actions ctx-dropdown-group">
+                <div class="ctx-dropdown-name">Actions</div>
+                <ul class="ctx-dropdown template">
+                    <li class="ctx-dropdown-header template">Name Template</li>
+                    <li class="ctx-dropdown-2 template">
+                        <ul>                            
+                            <li class="ctx-item template">Template</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /Actions -->
+        </div>
         <!-- <div class="context-menu celestial">
+            <div class="name">Name</div>
+            <div class="type">Type of</div>
+            <div class="states ctx-dropdown-group">
+                <div class="ctx-dropdown-name">States</div>
+                <ul class="ctx-dropdown">
+                    <li class="ctx-dropdown-header">Idles</li>
+                    <li class="ctx-dropdown-2">
+                        <ul>                            
+                            <li class="ctx-item template">Slow Idle</li>
+                            <li>Fast Idle</li>
+                        </ul>
+                    </li>
+                    <li class="ctx-dropdown-header">Walks</li>
+                    <li class="ctx-dropdown-2">
+                        <ul>                            
+                            <li>Slow Walk</li>
+                        </ul>
+                    </li>
+                    <li class="ctx-item template">Jump</li>
+                </ul>
+            </div>
         </div> -->
         <!-- /Celestial -->
         <!-- /Context Menus -->
