Having remote issues.

--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Celestials</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <!-- <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script> -->
     <!-- <script src="js/background.js" defer></script> -->
     <script src="js/celestials.js" defer></script>
 </head>
@@ -61,30 +62,37 @@
             </div>
             <!-- /Actions -->
         </div>
-        <!-- <div class="context-menu celestial">
-            <div class="name">Name</div>
-            <div class="type">Type of</div>
-            <div class="states ctx-dropdown-group">
-                <div class="ctx-dropdown-name">States</div>
-                <ul class="ctx-dropdown">
-                    <li class="ctx-dropdown-header">Idles</li>
-                    <li class="ctx-dropdown-2">
+        <!-- /Celestial -->
+        <!-- Application -->
+        <div class="context-menu application">
+            <div class="name">Celestials</div>
+            <!-- Templates -->
+            <div class="celestials ctx-dropdown-group">
+                <ul class="ctx-dropdown template">
+                    <li class="ctx-dropdown-header template">Name Template</li>
+                    <li class="ctx-dropdown-2 template">
                         <ul>                            
-                            <li class="ctx-item template">Slow Idle</li>
-                            <li>Fast Idle</li>
+                            <li class="ctx-item template">Template</li>
                         </ul>
                     </li>
-                    <li class="ctx-dropdown-header">Walks</li>
-                    <li class="ctx-dropdown-2">
-                        <ul>                            
-                            <li>Slow Walk</li>
-                        </ul>
-                    </li>
-                    <li class="ctx-item template">Jump</li>
                 </ul>
             </div>
-        </div> -->
-        <!-- /Celestial -->
+            <!-- /Templates -->
+            <!-- Actions -->
+            <div class="actions ctx-dropdown-group">
+                <div class="ctx-dropdown-name">Actions</div>
+                <ul class="ctx-dropdown template">
+                    <li class="ctx-dropdown-header template">Name Template</li>
+                    <li class="ctx-dropdown-2 template">
+                        <ul>                            
+                            <li class="ctx-item template">Template</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /Actions -->
+        </div>
+        <!-- /Application -->
         <!-- /Context Menus -->
     </div>
 </body>
