Set to the app version, working on fixing.

--- a/bin/index.html
+++ b/bin/index.html
@@ -7,7 +7,7 @@
     <title>Celestials</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <!-- <script src="js/background.js" defer></script> -->
+    <script src="js/background.js" defer></script>
     <script src="js/celestials.js" defer></script>
 </head>
 <body>
@@ -147,7 +147,7 @@
                             <img src="res/icons/lock.png" alt="">
                         </div>
                         <div class="celestial__content">
-                            ???
+                                <div class="name">???</div>
                         </div>
                     </div>
                 </div>
