--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <div class="ui details">
                 <div class="details__title">celestials</div>
                 <div class="details__version">v.0.3.0</div>
-                <div class="details__author"><a href="http://deviantart.com/jaclynonacloud">Jaclyn Staples</a> (jaclynonacloud)</div>
+                <div class="details__author"><a href="http://deviantart.com/jaclynonacloud">Jaclyn Staples</a> (jaclynonacloud) (<a href="https://github.com/jaclynonacloud/celestials/tree/CleanupFolders">Github</a>)</div>
                 <div class="loader"><span>Loading.....</span><span class="progress">XX%</span></div>
             </div>
             <div class="loaded hide">
