Working on fixing toggle group size of developer toggle.  Setting to 0 currently.  Hotfixed with 300px for testing.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <label class="ui toggle-group" data-tooltip="For developers only!">
                 <div class="title">Developer Mode</div>
                 <div class="ui toggle-container">
-                    <input type="checkbox" data-checkbox="dev-mode"><span class="slider"></span>
+                    <input type="checkbox" data-checkbox="dev-mode" checked><span class="slider"></span>
                 </div>
             </label>
             <!-- /Developer Mode -->
@@ -408,7 +408,7 @@
             <div class="ui details">
                 <div class="details__title">celestials</div>
                 <div class="details__version">v.0.3.0</div>
-                <div class="details__author"><a href="http://deviantart.com/jaclynonacloud">Jaclyn Staples</a> (jaclynonacloud) (<a href="https://github.com/jaclynonacloud/celestials/tree/CleanupFolders">Github</a>)</div>
+                <div class="details__author"><a href="http://deviantart.com/jaclynonacloud">Jaclyn Staples</a> (jaclynonacloud) (<a href="https://github.com/jaclynonacloud/celestials">Github</a>)</div>
                 <div class="loader"><span>Loading.....</span><span class="progress">XX%</span></div>
             </div>
             <div class="loaded hide">
