Working on drag from celestials panel when trying to spawn a new celestial.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <label class="ui toggle-group" data-tooltip="For developers only!">
                 <div class="title">Developer Mode</div>
                 <div class="ui toggle-container">
-                    <input type="checkbox" data-checkbox="dev-mode" checked><span class="slider"></span>
+                    <input type="checkbox" data-checkbox="dev-mode"><span class="slider"></span>
                 </div>
             </label>
             <!-- /Developer Mode -->
